--- a/Manager/Views/Player/Details.cshtml
+++ b/Manager/Views/Player/Details.cshtml
@@ -52,4 +52,4 @@
 
 <br />
 
-<output></output>
+<output style="display: -webkit-box; display: -moz-box; display: -ms-flexbox; display: flex; -webkit-flex-flow: column; flex-flow: column;"></output>
