Added Delete Skill and fixed magic strings

--- a/Manager/Views/Skills/Index.cshtml
+++ b/Manager/Views/Skills/Index.cshtml
@@ -30,9 +30,9 @@
                 @Html.DisplayFor(modelItem => item.Description)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.ID }) |
-                @Html.ActionLink("Details", "Details", new { id = item.ID }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.ID })
+                @Html.ActionLink("Edit", nameof(Manager.Controllers.SkillsController.Edit), new { id = item.ID }) |
+                @Html.ActionLink("Details", nameof(Manager.Controllers.SkillsController.Details), new { id = item.ID }) |
+                @Html.ActionLink("Delete", nameof(Manager.Controllers.SkillsController.Delete), new { id = item.ID })
             </td>
         </tr>
     }
