--- a/Manager/Views/Skills/Create.cshtml
+++ b/Manager/Views/Skills/Create.cshtml
@@ -6,11 +6,10 @@
 
 <h2>Create</h2>
 
-
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>Skill</h4>
         <hr />
@@ -80,7 +79,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", nameof(Manager.Controllers.SkillsController.Index))
 </div>
 
 @section Scripts {
