--- a/Manager/Views/Skills/Delete.cshtml
+++ b/Manager/Views/Skills/Delete.cshtml
@@ -1,11 +1,12 @@
 ﻿@model Manager.Models.Skill
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Delete";
 }
 
-<h2>Details</h2>
+<h2>Delete</h2>
 
+<h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>Skill</h4>
     <hr />
@@ -66,8 +67,14 @@
             @Html.DisplayFor(model => model.PassiveFormula)
         </dd>
     </dl>
+
+    @using (Html.BeginForm())
+    {
+        @Html.AntiForgeryToken()
+
+        <div class="form-actions no-color">
+            <input type="submit" value="Delete" class="btn btn-default" /> |
+            @Html.ActionLink("Back to List", nameof(Manager.Controllers.SkillsController.Index))
+        </div>
+    }
 </div>
-<p>
-    @Html.ActionLink("Edit", nameof(Manager.Controllers.SkillsController.Edit), new { id = Model.ID }) |
-    @Html.ActionLink("Back to List", nameof(Manager.Controllers.SkillsController.Index))
-</p>
