--- a/Manager/Views/Skills/Edit.cshtml
+++ b/Manager/Views/Skills/Edit.cshtml
@@ -6,11 +6,10 @@
 
 <h2>Edit</h2>
 
-
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>Skill</h4>
         <hr />
@@ -82,7 +81,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", nameof(Manager.Controllers.SkillsController.Index))
 </div>
 
 @section Scripts {
