Added an owner only check, started hiding editing links, and removed a few magic strings

--- a/Manager/Views/Player/Delete.cshtml
+++ b/Manager/Views/Player/Delete.cshtml
@@ -43,7 +43,7 @@
 
         <div class="form-actions no-color">
             <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index", new { id = ViewBag.Username })
+            @Html.ActionLink("Back to List", nameof(Manager.Controllers.PlayerController.Index), new { id = ViewBag.Username })
         </div>
     }
 </div>
