--- a/Manager/Views/Player/Edit.cshtml
+++ b/Manager/Views/Player/Edit.cshtml
@@ -50,7 +50,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index", new { id = ViewBag.Username })
+    @Html.ActionLink("Back to List", nameof(Manager.Controllers.PlayerController.Index), new { id = ViewBag.Username })
 </div>
 
 @section Scripts {
