--- a/Manager/Views/SkillStats/Index.cshtml
+++ b/Manager/Views/SkillStats/Index.cshtml
@@ -23,7 +23,10 @@
             <th>
                 @Html.DisplayNameFor(model => model.EXP)
             </th>
-            <th></th>
+            @if (ViewBag.IsOwner)
+            {
+                <th></th>
+            }
         </tr>
 
         @foreach (var item in Model)
@@ -45,13 +48,17 @@
                     @Html.DisplayFor(modelItem => item.Level)
                 </td>
                 <td style="white-space:nowrap">
-                    @Html.DisplayFor(modelItem => item.EXP)<span id="AddSkillXP" class="fa-stack fa-lg" style="margin:-17px 0 0 0px;height: 20px;cursor:pointer;"><i class="fa fa-square-o fa-stack-1x" aria-hidden="true"></i><i class="fa fa-plus fa-stack-1x" aria-hidden="true"></i></span>
+                    @Html.DisplayFor(modelItem => item.EXP)@if (ViewBag.IsOwner)
+                    {<span id="AddSkillXP" class="fa-stack fa-lg" style="margin:-17px 0 0 0px;height: 20px;cursor:pointer;"><i class="fa fa-square-o fa-stack-1x" aria-hidden="true"></i><i class="fa fa-plus fa-stack-1x" aria-hidden="true"></i></span>}
                 </td>
-                <td style="white-space:nowrap;">
-                    <input type="hidden" value="@(item.ID)" />
-                    <span id="EditSkillStat" class="fa fa-edit" style="cursor:pointer;"></span> |
-                    <span id="DeleteSkillStat" class="fa-stack fa-lg" style="cursor:pointer; font-size: 1.1em; margin-left: -8px;"><i class="fa fa-square-o fa-stack-1x" aria-hidden="true"></i><i class="fa fa-times fa-stack-1x" style="margin-left:4px; margin-top:-5px; text-shadow: -2px 2px #FFF" aria-hidden="true"></i></span>
-                </td>
+                @if (ViewBag.IsOwner)
+                {
+                    <td style="white-space:nowrap;">
+                        <input type="hidden" value="@(item.ID)" />
+                        <span id="EditSkillStat" class="fa fa-edit" style="cursor:pointer;"></span> |
+                        <span id="DeleteSkillStat" class="fa-stack fa-lg" style="cursor:pointer; font-size: 1.1em; margin-left: -8px;"><i class="fa fa-square-o fa-stack-1x" aria-hidden="true"></i><i class="fa fa-times fa-stack-1x" style="margin-left:4px; margin-top:-5px; text-shadow: -2px 2px #FFF" aria-hidden="true"></i></span>
+                    </td>
+                }
             </tr>
         }
     </table>
@@ -60,4 +67,7 @@ else
 {
     <p>No Skills Available</p>
 }
-<span id="AddSkillStat" class="fa-stack fa-lg" style="margin:-17px 0 0 0px;height: 20px;cursor:pointer;"><i class="fa fa-square-o fa-stack-1x" aria-hidden="true"></i><i class="fa fa-asterisk fa-stack-1x" style="margin-left:4px; margin-top:-5px; text-shadow: -2px 2px #FFF" aria-hidden="true"></i></span>
+@if (ViewBag.IsOwner)
+{
+    <span id="AddSkillStat" class="fa-stack fa-lg" style="margin:-17px 0 0 0px;height: 20px;cursor:pointer;"><i class="fa fa-square-o fa-stack-1x" aria-hidden="true"></i><i class="fa fa-asterisk fa-stack-1x" style="margin-left:4px; margin-top:-5px; text-shadow: -2px 2px #FFF" aria-hidden="true"></i></span>
+}
