Fixed the links

--- a/Manager/Views/Home/Contact.cshtml
+++ b/Manager/Views/Home/Contact.cshtml
@@ -2,16 +2,19 @@
     ViewBag.Title = "Contact";
 }
 <h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+<h3>Contact Jonathan Camilleri (xmiq)</h3>
 
-<address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
-</address>
+<div id="Github">
+    <h4>Website Issues</h4>
+    <p>For issues with the website, please create an issue in GitHub at <a href="https://github.com/xmiq/TheGamerPlayerManager/issues">the repoistory</a>.</p>
+</div>
 
-<address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
-</address>
+<div id="Story">
+    <h4>Story Questions</h4>
+    <p>For questions about my story(ies) please send me a private message on <a href="https://www.fanfiction.net/pm2/post.php?uid=6792792">FanFiciton</a> or leave a review on the <a href="https://www.fanfiction.net/u/6792792/Xmiq">story</a>.</p>
+</div>
+
+<div id="Other">
+    <h4>Other</h4>
+    <p>If you would rather contact me directly send me an email on <a href="mailto:xmiq@live.com">xmiq@live.com</a>.</p>
+</div>
