--- a/Manager/Views/Shared/_Layout.cshtml
+++ b/Manager/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
+    <title>@ViewBag.Title - The GPM</title>
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
@@ -20,13 +20,22 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("The Gamer Player Manager", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    @if (User.Identity.IsAuthenticated)
+                    {
+                        <li>@Html.ActionLink("Profile", nameof(Manager.Controllers.AccountController.AccountProfile).Replace("Account", ""), nameof(Manager.Controllers.AccountController).Replace("Controller", ""))</li>
+                        <li>@Html.ActionLink("Skills", nameof(Manager.Controllers.SkillsController.Index), nameof(Manager.Controllers.SkillsController).Replace("Controller", ""))</li>
+                        <li>@Html.ActionLink("Logout", nameof(Manager.Controllers.AccountController.Logoff).Replace("Account", ""), nameof(Manager.Controllers.AccountController).Replace("Controller", ""))</li>
+                    }
+                    else
+                    {
+                        <li>@Html.ActionLink("Login", nameof(Manager.Controllers.AccountController.Login).Replace("Account", ""), nameof(Manager.Controllers.AccountController).Replace("Controller", ""))</li>
+                    }
                 </ul>
             </div>
         </div>
