--- a/Manager/Views/Player/Details.cshtml
+++ b/Manager/Views/Player/Details.cshtml
@@ -40,7 +40,7 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Story)
+            @Html.DisplayFor(model => model.Story.Name)
         </dd>
     </dl>
 </div>
