--- a/Manager/Views/Player/Index.cshtml
+++ b/Manager/Views/Player/Index.cshtml
@@ -36,7 +36,7 @@
                 @Html.DisplayFor(modelItem => item.Surname)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Story)
+                @Html.DisplayFor(modelItem => item.Story.Name)
             </td>
             <td>
                 @if (ViewBag.IsOwner)
