--- a/Manager/Views/Story/Delete.cshtml
+++ b/Manager/Views/Story/Delete.cshtml
@@ -18,15 +18,15 @@
         <dd>
             @Html.DisplayFor(model => model.Name)
         </dd>
-
     </dl>
 
-    @using (Html.BeginForm()) {
+    @using (Html.BeginForm())
+    {
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
             <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            @Html.ActionLink("Back to List", nameof(Manager.Controllers.AccountController.AccountProfile).Replace("Account", ""), nameof(Manager.Controllers.AccountController).Replace("Controller", ""))
         </div>
     }
 </div>
