--- a/Manager/Views/Story/MyIndex.cshtml
+++ b/Manager/Views/Story/MyIndex.cshtml
@@ -18,9 +18,9 @@
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.ID }) |
-                @Html.ActionLink("Details", "Details", new { id = item.ID }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.ID })
+                @Html.ActionLink("Edit", nameof(Manager.Controllers.StoryController.Edit), new { id = item.ID }) |
+                @Html.ActionLink("Details", nameof(Manager.Controllers.StoryController.Details), new { id = item.ID, username = ViewBag.Username }) |
+                @Html.ActionLink("Delete", nameof(Manager.Controllers.StoryController.Delete), new { id = item.ID })
             </td>
         </tr>
     }
