--- a/Manager/Views/Story/Details.cshtml
+++ b/Manager/Views/Story/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Manager.Models.Story
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Story";
 }
 
 <h2>Details</h2>
@@ -20,7 +20,7 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("View Players", nameof(Manager.Controllers.PlayerController.Index), nameof(Manager.Controllers.PlayerController).Replace("Controller", ""), new { id = ViewBag.Username }, null) |
+    @Html.ActionLink("View Players", nameof(Manager.Controllers.PlayerController.Index), nameof(Manager.Controllers.PlayerController).Replace("Controller", ""), new { id = Model.ID, username = ViewBag.Username }, null) |
     @Html.ActionLink("Edit", nameof(Manager.Controllers.StoryController.Edit), new { id = Model.ID }) |
     @Html.ActionLink("Back to List", nameof(Manager.Controllers.AccountController.AccountProfile).Replace("Account", ""), nameof(Manager.Controllers.AccountController).Replace("Controller", ""))
 </p>
