--- a/Manager/Views/Player/Create.cshtml
+++ b/Manager/Views/Player/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Manager.Models.Player
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Create Player";
 }
 
 <h2>Create</h2>
@@ -49,7 +49,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", nameof(Manager.Controllers.PlayerController.Index), new { id = ViewBag.Username })
+    @Html.ActionLink("Back to List", nameof(Manager.Controllers.PlayerController.Index), new { id = ViewBag.Story, username = ViewBag.Username })
 </div>
 
 @section Scripts {
