--- a/Manager/Views/Player/Create.cshtml
+++ b/Manager/Views/Player/Create.cshtml
@@ -32,13 +32,7 @@
             </div>
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Story, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Story, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Story, "", new { @class = "text-danger" })
-            </div>
-        </div>
+        @Html.HiddenFor(model => model.Story.ID)
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
@@ -49,7 +43,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", nameof(Manager.Controllers.PlayerController.Index), new { id = ViewBag.Story, username = ViewBag.Username })
+    @Html.ActionLink("Back to List", nameof(Manager.Controllers.PlayerController.Index), new { id = Model.Story.ID, username = ViewBag.Username })
 </div>
 
 @section Scripts {
