--- a/Manager/Views/Player/Edit.cshtml
+++ b/Manager/Views/Player/Edit.cshtml
@@ -36,7 +36,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Story, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Story, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DropDownListFor(model => model.Story, (SelectListItem[])ViewBag.StoryList, new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.Story, "", new { @class = "text-danger" })
             </div>
         </div>
