Changed the chapter links to pass the story as well

--- a/Manager/Views/Player/Details.cshtml
+++ b/Manager/Views/Player/Details.cshtml
@@ -18,6 +18,7 @@
     <hr />
     <input type="hidden" id="PlayerID" value="@(Model.ID)" />
     <input type="hidden" id="Username" value="@(ViewBag.Username)" />
+    <input type="hidden" id="Story" value="@(ViewBag.Story)" />
     <dl class="dl-horizontal">
         <dt>
             @Html.DisplayNameFor(model => model.Name)
