--- a/Manager/Views/SkillStats/Create.cshtml
+++ b/Manager/Views/SkillStats/Create.cshtml
@@ -15,6 +15,10 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.Chapter.ID)
+        @if (ViewBag.Story != null)
+        {
+            @Html.Hidden("story", (int)ViewBag.Story)
+        }
 
         <div class="form-group">
             @Html.LabelFor(model => model.SkillID.ID, "Skill", htmlAttributes: new { @class = "control-label col-md-2" })
@@ -54,7 +58,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", nameof(Manager.Controllers.PlayerController.Details), nameof(Manager.Controllers.PlayerController).Replace("Controller", ""), new { id = ViewBag.Player, Username = ViewBag.Username }, null)
+    @Html.ActionLink("Back to List", nameof(Manager.Controllers.PlayerController.Details), nameof(Manager.Controllers.PlayerController).Replace("Controller", ""), new { id = ViewBag.Player, Username = ViewBag.Username, story = ViewBag.Story, chapter = Model.Chapter.ID }, null)
 </div>
 
 @section Scripts {
