--- a/Manager/Views/SkillStats/Index.cshtml
+++ b/Manager/Views/SkillStats/Index.cshtml
@@ -49,14 +49,14 @@
                 </td>
                 <td style="white-space:nowrap">
                     @Html.DisplayFor(modelItem => item.EXP)@if (ViewBag.IsOwner)
-                    {<span id="AddSkillXP" class="fa-stack fa-lg" style="margin:-17px 0 0 0px;height: 20px;cursor:pointer;"><i class="fa fa-square-o fa-stack-1x" aria-hidden="true"></i><i class="fa fa-plus fa-stack-1x" aria-hidden="true"></i></span>}
+                    {<span name="AddSkillXP" class="fa-stack fa-lg" style="margin:-17px 0 0 0px;height: 20px;cursor:pointer;"><i class="fa fa-square-o fa-stack-1x" aria-hidden="true"></i><i class="fa fa-plus fa-stack-1x" aria-hidden="true"></i></span>}
                 </td>
                 @if (ViewBag.IsOwner)
                 {
                     <td style="white-space:nowrap;">
                         <input type="hidden" value="@(item.ID)" />
-                        <span id="EditSkillStat" class="fa fa-edit" style="cursor:pointer;"></span> |
-                        <span id="DeleteSkillStat" class="fa-stack fa-lg" style="cursor:pointer; font-size: 1.1em; margin-left: -8px;"><i class="fa fa-square-o fa-stack-1x" aria-hidden="true"></i><i class="fa fa-times fa-stack-1x" style="margin-left:4px; margin-top:-5px; text-shadow: -2px 2px #FFF" aria-hidden="true"></i></span>
+                        <span name="EditSkillStat" class="fa fa-edit" style="cursor:pointer;"></span> |
+                        <span name="DeleteSkillStat" class="fa-stack fa-lg" style="cursor:pointer; font-size: 1.1em; margin-left: -8px;"><i class="fa fa-square-o fa-stack-1x" aria-hidden="true"></i><i class="fa fa-times fa-stack-1x" style="margin-left:4px; margin-top:-5px; text-shadow: -2px 2px #FFF" aria-hidden="true"></i></span>
                     </td>
                 }
             </tr>
