--- a/Manager/Views/Stats/Edit.cshtml
+++ b/Manager/Views/Stats/Edit.cshtml
@@ -19,6 +19,7 @@
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.ID)
         @Html.HiddenFor(model => model.Chapter.ID)
+        @Html.Hidden("story", (int)ViewBag.Story)
 
         <div class="form-group">
             @Html.LabelFor(model => model.Level, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -125,7 +126,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", nameof(Manager.Controllers.PlayerController.Details), nameof(Manager.Controllers.PlayerController).Replace("Controller", ""), new { id = ViewBag.Player, username = ViewBag.Username }, null)
+    @Html.ActionLink("Back to List", nameof(Manager.Controllers.PlayerController.Details), nameof(Manager.Controllers.PlayerController).Replace("Controller", ""), new { id = ViewBag.Player, username = ViewBag.Username, story = ViewBag.Story, chapter = Model.Chapter.ID }, null)
 </div>
 
 @section Scripts {
