Fixed launch bugs

--- a/Manager/Views/Player/Create.cshtml
+++ b/Manager/Views/Player/Create.cshtml
@@ -42,6 +42,11 @@
     </div>
 }
 
+@if (ViewBag.Exception != null)
+{
+    <p>@(ViewBag.Exception.Message)</p>
+}
+
 <div>
     @Html.ActionLink("Back to List", nameof(Manager.Controllers.PlayerController.Index), new { id = Model.Story.ID, username = ViewBag.Username })
 </div>
