--- a/Manager/Views/Shared/_Layout.cshtml
+++ b/Manager/Views/Shared/_Layout.cshtml
@@ -34,6 +34,7 @@
                     else
                     {
                         <li>@Html.ActionLink("Login", nameof(Manager.Controllers.AccountController.Login).Replace("Account", ""), nameof(Manager.Controllers.AccountController).Replace("Controller", ""))</li>
+                        <li>@Html.ActionLink("Register", nameof(Manager.Controllers.AccountController.Register).Replace("Account", ""), nameof(Manager.Controllers.AccountController).Replace("Controller", ""))</li>
                     }
                 </ul>
             </div>
