--- a/Manager/Views/Account/Register.cshtml
+++ b/Manager/Views/Account/Register.cshtml
@@ -63,6 +63,11 @@
     </div>
 }
 
+@if (ViewBag.Exception != null)
+{
+    <p>@(ViewBag.Exception.Message)</p>
+}
+
 <div>
     @Html.ActionLink("Back to List", "Index")
 </div>
