--- a/Manager/Views/SkillStats/Create.cshtml
+++ b/Manager/Views/SkillStats/Create.cshtml
@@ -15,6 +15,7 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.Chapter.ID)
+        @Html.HiddenFor(model => model.Player.ID)
         @if (ViewBag.Story != null)
         {
             @Html.Hidden("story", (int)ViewBag.Story)
@@ -58,7 +59,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", nameof(Manager.Controllers.PlayerController.Details), nameof(Manager.Controllers.PlayerController).Replace("Controller", ""), new { id = ViewBag.Player, Username = ViewBag.Username, story = ViewBag.Story, chapter = Model.Chapter.ID }, null)
+    @Html.ActionLink("Back to List", nameof(Manager.Controllers.PlayerController.Details), nameof(Manager.Controllers.PlayerController).Replace("Controller", ""), new { id = Model.Player.ID, Username = ViewBag.Username, story = ViewBag.Story, chapter = Model.Chapter.ID }, null)
 </div>
 
 @section Scripts {
