--- a/Manager/Views/Stats/Edit.cshtml
+++ b/Manager/Views/Stats/Edit.cshtml
@@ -17,7 +17,7 @@
         <input type="hidden" name="username" value="@(ViewBag.Username)" />
 
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.ID)
+        <input type="hidden" id="ID" name="ID" value="@(Model.ID)" />
         @Html.HiddenFor(model => model.Chapter.ID)
         @Html.Hidden("story", (int)ViewBag.Story)
 
