--- a/Manager/Views/Story/Create.cshtml
+++ b/Manager/Views/Story/Create.cshtml
@@ -21,13 +21,17 @@
                 @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
             </div>
         </div>
-
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Create" class="btn btn-default" />
             </div>
         </div>
     </div>
+}
+
+@if (ViewBag.Exception != null)
+{
+    <p>@(ViewBag.Exception.Message)</p>
 }
 
 <div>
